Update Google fycons with new logos. Add unboxed Google logos.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -464,8 +464,14 @@
 .fycon-source-google {
   &:before { content: "\e08b"; }
 }
+.fycon-source-google2 {
+  &:before { content: "\e0bb"; }
+}
 .fycon-source-googleplus {
   &:before { content: "\e08c"; }
+}
+.fycon-source-googleplus2 {
+  &:before { content: "\e0bc"; }
 }
 .fycon-source-instagram {
   &:before { content: "\e08d"; }
@@ -590,7 +596,13 @@
   &.fycon-source-google:before {
     color: @brand-google;
   }
+  &.fycon-source-google2:before {
+    color: @brand-google;
+  }
   &.fycon-source-googleplus:before {
+    color: @brand-gplus;
+  }
+  &.fycon-source-googleplus2:before {
     color: @brand-gplus;
   }
   &.fycon-source-instagram:before {
