--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -44,7 +44,7 @@
 @brand-facebook:      #3b5998;
 @brand-flickr:        #ff0084;
 @brand-foursquare:      #0cbadf;
-@brand-google:        #4285f4;
+@brand-google:        #DC4E41;
 @brand-gplus:         #dd4b39;
 @brand-instagram:       #3f729b;
 @brand-linkedin:      #0e76a8;
