--- a/src/styles/toggles.less
+++ b/src/styles/toggles.less
@@ -16,6 +16,7 @@
   position: absolute;
   left: 0;
   opacity: 0;
+  cursor: pointer; // At times, the declaration on .toggle isn't enough.
 }
 
 // BG
