Fycons for Columns and Mosaic apps.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -245,6 +245,9 @@
 .fycon-icon-chat {
   &:before { content: "\e047"; }
 }
+.fycon-icon-columns {
+  &:before { content: "\e0bf"; }
+}
 .fycon-icon-comments {
   &:before { content: "\e048"; }
 }
@@ -268,6 +271,9 @@
 }
 .fycon-icon-more {
   &:before { content: "\e04e"; }
+}
+.fycon-icon-mosaic {
+  &:before { content: "\e0bd"; }
 }
 .fycon-icon-polls {
   &:before { content: "\e04f"; }
@@ -317,6 +323,9 @@
 .fycon-logo-chat {
   &:before { content: "\e05d"; }
 }
+.fycon-logo-columns {
+  &:before { content: "\e0c0"; }
+}
 .fycon-logo-comments {
   &:before { content: "\e05e"; }
 }
@@ -346,6 +355,9 @@
 }
 .fycon-logo-modq {
   &:before { content: "\e066"; }
+}
+.fycon-logo-mosaic {
+  &:before { content: "\e0be"; }
 }
 .fycon-logo-polls {
   &:before { content: "\e067"; }
