Fycons for Columns app, Mosaic app, new Google logo.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -5,6 +5,9 @@
 .fycon-action-etc {
   &:before { content: "\e000"; }
 }
+.fycon-action-etc-vertical {
+  &:before { content: "\e0b5"; }
+}
 .fycon-action-favorite {
   &:before { content: "\e001"; }
 }
@@ -67,6 +70,9 @@
 }
 .fycon-arrow-back {
   &:before { content: "\e014"; }
+}
+.fycon-arrow-btn-picker {
+  &:before { content: "\e0b7"; }
 }
 .fycon-arrow-down {
   &:before { content: "\e015"; }
@@ -239,6 +245,9 @@
 .fycon-icon-chat {
   &:before { content: "\e047"; }
 }
+.fycon-icon-columns {
+  &:before { content: "\e0bf"; }
+}
 .fycon-icon-comments {
   &:before { content: "\e048"; }
 }
@@ -262,6 +271,9 @@
 }
 .fycon-icon-more {
   &:before { content: "\e04e"; }
+}
+.fycon-icon-mosaic {
+  &:before { content: "\e0bd"; }
 }
 .fycon-icon-polls {
   &:before { content: "\e04f"; }
@@ -311,6 +323,9 @@
 .fycon-logo-chat {
   &:before { content: "\e05d"; }
 }
+.fycon-logo-columns {
+  &:before { content: "\e0c0"; }
+}
 .fycon-logo-comments {
   &:before { content: "\e05e"; }
 }
@@ -340,6 +355,9 @@
 }
 .fycon-logo-modq {
   &:before { content: "\e066"; }
+}
+.fycon-logo-mosaic {
+  &:before { content: "\e0be"; }
 }
 .fycon-logo-polls {
   &:before { content: "\e067"; }
@@ -422,6 +440,9 @@
 .fycon-search {
   &:before { content: "\e080"; }
 }
+.fycon-search-happy {
+  &:before { content: "\e0b6"; }
+}
 .fycon-settings-admin {
   &:before { content: "\e081"; }
 }
@@ -455,8 +476,14 @@
 .fycon-source-google {
   &:before { content: "\e08b"; }
 }
+.fycon-source-google2 {
+  &:before { content: "\e0bb"; }
+}
 .fycon-source-googleplus {
   &:before { content: "\e08c"; }
+}
+.fycon-source-googleplus2 {
+  &:before { content: "\e0bc"; }
 }
 .fycon-source-instagram {
   &:before { content: "\e08d"; }
@@ -581,7 +608,13 @@
   &.fycon-source-google:before {
     color: @brand-google;
   }
+  &.fycon-source-google2:before {
+    color: @brand-google;
+  }
   &.fycon-source-googleplus:before {
+    color: @brand-gplus;
+  }
+  &.fycon-source-googleplus2:before {
     color: @brand-gplus;
   }
   &.fycon-source-instagram:before {
@@ -658,5 +691,8 @@
   }
   &.fycon-icon-wall:before {
     color: @lf-purple;
+  }
+  &.fycon-verified:before {
+    color: @brand-twitter;
   }
 }
