--- a/src/styles/no-data.less
+++ b/src/styles/no-data.less
@@ -13,7 +13,7 @@
   > [class^="fycon-"],
   > [class*=" fycon-"] {
     display: block;
-    margin: 0 auto 16px;
+    margin: 0 auto 28px;
     font-size: 90px;
     line-height: 1;
     color: @gray;
@@ -22,15 +22,15 @@
   // Small Fycon
   > .fycon-sm {
     display: inline-block;
-    margin: 0 4px 16px;
+    margin: 0 4px 22px;
     font-size: 42px;
   }
       
   // Header
   .no-data-header {
     max-width: 560px;
-    margin: 0 auto 10px;
-    font-size: 18px;
+    margin: 0 auto 16px;
+    font-size: 24px;
     font-weight: 500;
     line-height: 24px;
     color: @gray-darkest;
@@ -39,9 +39,9 @@
   // Subheader, buttons, links, etc.
   p {
     max-width: 560px;
-    margin: 0 auto 16px;
+    margin: 0 auto 20px;
     font-size: @font-size-base;
-    line-height: 18px;
-    color: @gray-darkish;
+    line-height: 24px;
+    color: @gray-dark;
   }
 }
