Add Carousel App and Feature Card App fycons.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -242,6 +242,9 @@
 .fycon-home {
   &:before { content: "\e046"; }
 }
+.fycon-icon-carousel {
+  &:before { content: "\e0c1"; }
+}
 .fycon-icon-chat {
   &:before { content: "\e047"; }
 }
@@ -256,6 +259,9 @@
 }
 .fycon-icon-custom-app {
   &:before { content: "\e0b0"; }
+}
+.fycon-icon-feature-card {
+  &:before { content: "\e0c3"; }
 }
 .fycon-icon-feed {
   &:before { content: "\e04a"; }
@@ -320,6 +326,9 @@
 .fycon-logo-apple {
   &:before { content: "\e05c"; }
 }
+.fycon-logo-carousel {
+  &:before { content: "\e0c2"; }
+}
 .fycon-logo-chat {
   &:before { content: "\e05d"; }
 }
@@ -337,6 +346,9 @@
 }
 .fycon-logo-developers {
   &:before { content: "\e060"; }
+}
+.fycon-logo-feature-card {
+  .fycon-feature;
 }
 .fycon-logo-feed {
   &:before { content: "\e061"; }
