'add-plus' class attaches a plus symbol to a fycon

--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -130,6 +130,10 @@
     &.pull-right {
       line-height: inherit;
     }
+
+    &.add-plus:after {
+      vertical-align: baseline;
+    }
   }
 }
 
