Custom margin for bolt fycon with add-plus.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -714,6 +714,7 @@
 [class*=" fycon-"] { // Needs this extra specificity
   &.add-plus {
 
+    &.fycon-bolt:after,
     &.fycon-source-twitter:after {
       margin-left: -0.1em;
     }
