--- a/src/styles/navs.less
+++ b/src/styles/navs.less
@@ -18,14 +18,15 @@
       padding: 8px 0 12px;
       font-size: @font-size-large;
       line-height: ceil((@font-size-large * 1.2)); // ~22px
-      color: @gray-dark;
+      color: @gray-darkest;
       border-width: 0 0 2px;
       border-radius: 0;
+      opacity: 0.8;
 
       &:hover {
-        color: @gray-darkest;
         background-color: transparent;
         border-color: @nav-tabs-border-color;
+        opacity: 1;
       }
     }
 
@@ -33,8 +34,19 @@
       &,
       &:hover,
       &:focus {
+        color: @gray-darkest;
         border-width: 0 0 2px;
         border-color: @nav-tabs-active-link-hover-border-color;
+        opacity: 1;
+      }
+    }
+
+    &.disabled > a {
+      &,
+      &:hover,
+      &:focus {
+        color: @gray-darkest;
+        opacity: 0.15;
       }
     }
   }
@@ -42,6 +54,7 @@
 
 .nav-tabs-sm {
   > li > a {
+    margin-right: 20px;
     padding: 6px 0 8px;
     font-size: @font-size-base;
     line-height: @line-height-base;
