Tabs: Remove bg color and outline from tab focus.

--- a/src/styles/navs.less
+++ b/src/styles/navs.less
@@ -28,6 +28,11 @@
         border-color: @nav-tabs-border-color;
         opacity: 1;
       }
+
+      &:focus {
+        outline: 0;
+        background-color: transparent;
+      }
     }
 
     &.active > a {
