--- a/src/styles/forms.less
+++ b/src/styles/forms.less
@@ -46,6 +46,8 @@ input[type="radio"] {
   -moz-appearance: none;
   outline: 0;
   font-size: 1.1em;
+  width: 1.2em; // FF, IE
+  height: 1.2em; // FF, IE
 
   &:before {
     .fycons-styles-base;
