List Group styles.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -331,6 +331,30 @@
 @close-color:                   @gray-darkish;
 @close-height:                  30px;
 
+// List Groups
+// -------------------------
+@list-group-bg:                 #fff;
+@list-group-border:             @gray-light;
+@list-group-border-radius:      0;
+
+@list-group-hover-bg:           #fff;
+@list-group-active-color:       @gray-darkest;
+@list-group-active-bg:          rgba(81, 127, 164, 0.2); // #517FA4 - light blue
+@list-group-active-border:      @list-group-border;
+@list-group-active-text-color:  @gray-darker;
+
+@list-group-disabled-color:      @gray;
+@list-group-disabled-bg:         @gray-lightest;
+@list-group-disabled-text-color: @list-group-disabled-color;
+
+@list-group-link-color:         @gray-dark;
+@list-group-link-hover-color:   @gray-darkest;
+@list-group-link-heading-color: @gray-darkest;
+
+@list-group-text-color:         @gray-dark; // (LF variable)
+@list-group-bg-alt:             @gray-lightest; // For striped lists (LF variable)
+@list-group-hover-bg-alt:       @gray-light; // For striped lists (LF variable)
+
 // Panels
 // -------------------------
 @panel-body-padding:          17px;
