List Group: Adjust rounded corners.

--- a/src/styles/list-group.less
+++ b/src/styles/list-group.less
@@ -42,6 +42,7 @@ button.list-group-item {
   .list-group-item {
     margin-bottom: 0;
     border: 0;
+    border-radius: 0;
 
     &:nth-child(odd) {
       background-color: @gray-lightest;
