--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -335,7 +335,7 @@
 // -------------------------
 @list-group-bg:                 #fff;
 @list-group-border:             @gray-light;
-@list-group-border-radius:      0;
+@list-group-border-radius:      @border-radius-small;
 
 @list-group-hover-bg:           #fff;
 @list-group-active-color:       @gray-darkest;
