--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -162,20 +162,21 @@
 
 // Forms
 // -------------------------
-@input-bg:                      #fff;
-@input-bg-disabled:             @gray-lighter;
+@input-bg:                       #fff;
+@input-bg-disabled:              @gray-lighter;
 
-@input-color:                   @gray-darker;
-@input-border:                  @gray-light;
-@input-border-radius:           @border-radius-small;
-@input-border-focus:            @blue;
+@input-color:                    @gray-darker;
+@input-border:                   @gray-light;
+@input-border-radius:            @border-radius-small;
+@input-border-focus:             @blue;
+@input-color-placeholder:        @gray-darkish;
 
-@input-height-base:             (@line-height-computed + (@padding-base-vertical * 2) + 2);
-@input-height-xs:               (@font-size-small * 2);
+@input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
+@input-height-xs:                (@font-size-small * 2);
 
-@sidebar-form-group-height:       48px;
-@sidebar-form-label-font-size:    @font-size-base;
-@sidebar-form-label-line-height:  18px;
+@sidebar-form-group-height:      48px;
+@sidebar-form-label-font-size:   @font-size-base;
+@sidebar-form-label-line-height: 18px;
 
 
 // Buttons
