Query Inputs: Remove bottom margin.

--- a/src/styles/input-groups.less
+++ b/src/styles/input-groups.less
@@ -15,6 +15,10 @@
 .query-input {
   position: relative; // For loader
   
+  .form-group {
+    margin-bottom: 0;
+  }
+
   .input-group {
     .fycon-search;
     display: block; // Override TwBootstrap style (display: table-cell)
