Toggles: Update to new design.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -398,11 +398,11 @@
 @toggle-height-sm: 22px;
 @toggle-label-width-sm: 64px;
 
-@toggle-handle: @toggle-height;
-@toggle-handle-sm: @toggle-height-sm;
+@toggle-handle: @toggle-height - 2px;
+@toggle-handle-sm: @toggle-height-sm - 2px;
 
 @toggle-on-bg: @green;
-@toggle-off-bg: #eee;
+@toggle-off-bg: @gray-light;
 
 
 // Pager
