--- a/src/styles/toggles.less
+++ b/src/styles/toggles.less
@@ -7,7 +7,8 @@
   position: relative;
   width: @toggle-width;
   height: @toggle-height;
-  overflow: hidden;
+  //overflow: hidden; // Commented-out due to it cutting off the toggle handle in FF.
+  vertical-align: middle;
   margin-bottom: auto;
   cursor: pointer;
 }
@@ -23,57 +24,49 @@
 .toggle span {
   display: block;
   height: @toggle-height;
-  background-color: @gray-lightest;
+  background-color: @toggle-off-bg;
   border-radius: 100px;
-  border: 1px solid #bbb;
-  box-shadow: inset 0 0 4px rgba(0, 0, 0, .1);
-  // Can't use .transition mixin because "transform" needs prefixing
-  -webkit-transition: -webkit-transform background-color 0.1s ease-in-out, border-color 0.1s ease-in-out;
-     -moz-transition: -moz-transform background-color 0.1s ease-in-out, border-color 0.1s ease-in-out;
-      -ms-transition: -ms-transform background-color 0.1s ease-in-out, border-color 0.1s ease-in-out;
-       -o-transition: -o-transform background-color 0.1s ease-in-out, border-color 0.1s ease-in-out;
-          transition: transform background-color 0.1s ease-in-out, border-color 0.1s ease-in-out;  
+  .transition(~"background-color 0.1s ease-in-out, border-color 0.1s ease-in-out");
+
+  // Hover
+  &:hover {
+    background-color: @gray;
+  }
 }
 
 // Handle
 .toggle span:before {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1px;
+  left: 1px;
   z-index: 1;
   display: block;
   width: @toggle-handle;
   height: @toggle-handle;
   content: "";
   background-color: #fff;
-  background-image: -webkit-linear-gradient(top, #fff 0, #f2f2f2 100%);
-  background-image: linear-gradient(to bottom, #fff 0, #f2f2f2 100%);
-  border: 1px solid rgba(0, 0, 0, .2);
   border-radius: 100px;
   .translate3d(0, 0, 0);
   -ms-transform: translateX(0); // IE9
-  // Can't use .transition mixin because "transform" needs prefixing
-  -webkit-transition: -webkit-transform 0.1s ease-in-out;
-     -moz-transition: -moz-transform 0.1s ease-in-out;
-      -ms-transition: -ms-transform 0.1s ease-in-out;
-       -o-transition: -o-transform 0.1s ease-in-out;
-          transition: transform 0.1s ease-in-out;
+  .transition-transform(0.1s ease-in-out);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
 }
-
 
 // Checked
 .toggle input:checked + span {
 
   // BG    
-  border: 1px solid @toggle-on-bg;
   background-color: @toggle-on-bg;
-  box-shadow: inset 0 0 15px rgba(255, 255, 255, .25);
   
   // Handle
   &:before {
-    border: 1px solid @toggle-on-bg;
-    .translate3d(@toggle-width - @toggle-handle, 0, 0);
-     -ms-transform: translateX(@toggle-width - @toggle-handle); // IE9
+    .translate3d(@toggle-width - @toggle-handle - 2, 0, 0);
+     -ms-transform: translateX(@toggle-width - @toggle-handle - 2); // IE9
+  }
+
+  // Hover
+  &:hover {
+    background-color: darken(@toggle-on-bg, 10%);
   }
 }
 
@@ -98,8 +91,8 @@
   
   // Checked
   input:checked + span:before {
-    .translate3d(@toggle-width-sm - @toggle-handle-sm, 0, 0);
-    -ms-transform: translateX(@toggle-width-sm - @toggle-handle-sm); // IE9
+    .translate3d(@toggle-width-sm - @toggle-handle-sm - 2, 0, 0);
+    -ms-transform: translateX(@toggle-width-sm - @toggle-handle-sm - 2); // IE9
   }
 }
 
@@ -113,31 +106,35 @@
   
   // "On" text
   span {
-    padding: 0 @toggle-handle 0 8px;
+    padding: 1px @toggle-handle 0 8px; // Add 1px top padding to vertically align text. Works better than increasing line-height on IE9-11.
     font-size: 14px;
-    font-weight: bold;
+    font-weight: 500;
     line-height: @toggle-height;
     color: #fff;
     text-align: center;
-    text-shadow: 0 -1px rgba(0, 0, 0, 0.25);
     text-transform: uppercase;  
   }
   
   // "Off" Text
   span:after {
     position: absolute;
-    top: 1px;
+    top: 0;
     left: 0;
     display: block;
-    width: calc(100% - 2px);
-    height: @toggle-height - 2px;
-    padding: 0 8px 0 @toggle-handle;
+    width: calc(100% ~'-' 2px);
+    height: @toggle-height;
+    padding: 1px 8px 0 @toggle-handle;
     content: attr(data-off);
     background-color: @toggle-off-bg;
-    color: @gray-darker;
+    color: @gray-dark;
     text-align: center;
-    text-shadow: 0 1px #fff;
     border-radius: 100px;
+    .transition(~"color 0.1s ease-in-out, background-color 0.1s ease-in-out");
+  }
+
+  span:hover:after {
+    color: @gray-darker;
+    background-color: @gray;
   }
       
   // Checked
@@ -145,8 +142,8 @@
      
     // Handle
     + span:before {
-      .translate3d(@toggle-label-width - @toggle-handle, 0, 0);    
-      -ms-transform: translateX(@toggle-label-width - @toggle-handle); // IE9
+      .translate3d(@toggle-label-width - @toggle-handle - 2, 0, 0);    
+      -ms-transform: translateX(@toggle-label-width - @toggle-handle - 2); // IE9
     }
 
     // "Off" Text
@@ -166,19 +163,20 @@
   
   // "On" text
   span {
+    padding: 1px (@toggle-handle-sm + 2) 0 8px;
     font-size: 12px;
     line-height: @toggle-height-sm;
   }
   
   // "Off" text
   span:after {
-    height: @toggle-height-sm - 2px;
-    padding: 0 8px 0 @toggle-handle-sm;
+    height: @toggle-height-sm;
+    padding: 1px 8px 0 @toggle-handle-sm;
   }
   
   // Handle
   input:checked + span:before {
-    .translate3d(@toggle-label-width-sm - @toggle-handle-sm, 0, 0);    
-    -ms-transform: translateX(@toggle-label-width-sm - @toggle-handle-sm); // IE9
+    .translate3d(@toggle-label-width-sm - @toggle-handle-sm - 2, 0, 0);    
+    -ms-transform: translateX(@toggle-label-width-sm - @toggle-handle-sm - 2); // IE9
   }
 }
