--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -254,6 +254,14 @@
   max-width: 100%;
 }
 
+// Force long words to break (ex: URLs).
+// Ref: https://css-tricks.com/almanac/properties/w/word-break/
+.word-break() {
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word; // Non standard for webkit
+}
+
 
 // Vertically center using a top margin.
 // -------------------------
