--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -408,3 +408,10 @@
 // Pager
 // -------------------------
 @pager-border-radius:           @btn-radius;
+
+
+// Scrollable
+// -------------------------
+@scrollable-max-height:     350px;
+@scrollable-sm-max-height:  200px;
+@scrollable-lg-max-height:  500px;
