Add Yahoo and AOL fycons.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -473,6 +473,9 @@
 .fycon-settings-switch {
   &:before { content: "\e086"; }
 }
+.fycon-source-aol {
+  &:before { content: "\e0c4"; }
+}
 .fycon-source-drupal {
   &:before { content: "\e087"; }
 }
@@ -538,6 +541,9 @@
 }
 .fycon-source-wordpress {
   &:before { content: "\e09a"; }
+}
+.fycon-source-yahoo {
+  &:before { content: "\e0c5"; }
 }
 .fycon-source-youtube1 {
   &:before { content: "\e09b"; }
