Yahoo fycon color.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -677,6 +677,9 @@
   &.fycon-source-wordpress:before {
     color: @brand-wordpress;
   }
+  &.fycon-source-yahoo:before {
+    color: @brand-yahoo;
+  }
   &.fycon-source-youtube1:before {
     color: @brand-youtube;
   }
