--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -40,24 +40,25 @@
 
 // Common Social Media Colors
 // -------------------------
-@brand-drupal:        #0077c0;
-@brand-facebook:      #3b5998;
-@brand-flickr:        #ff0084;
-@brand-foursquare:      #0cbadf;
-@brand-google:        #DC4E41;
-@brand-gplus:         #dd4b39;
-@brand-instagram:       #3f729b;
-@brand-linkedin:      #0e76a8;
-@brand-pinterest:       #c8232c;
-@brand-reddit:        #ff4500;
+@brand-drupal:      #0077c0;
+@brand-facebook:    #3b5998;
+@brand-flickr:      #ff0084;
+@brand-foursquare:  #0cbadf;
+@brand-google:      #DC4E41;
+@brand-gplus:       #dd4b39;
+@brand-instagram:   #3f729b;
+@brand-linkedin:    #0e76a8;
+@brand-pinterest:   #c8232c;
+@brand-reddit:      #ff4500;
 @brand-rss:         #ee802f;
-@brand-soundcloud:      #ff7700;
-@brand-tumblr:        #34526f;
-@brand-twitter:       #55acee;
-@brand-vimeo:         #44bbff;
+@brand-soundcloud:  #ff7700;
+@brand-tumblr:      #34526f;
+@brand-twitter:     #55acee;
+@brand-vimeo:       #44bbff;
 @brand-vine:        #00a478;
-@brand-youtube:       #c4302b;
-@brand-wordpress:       #21759b;
+@brand-wordpress:   #21759b;
+@brand-yahoo:       #780099;
+@brand-youtube:     #c4302b;
 
 // Typography
 // -------------------------
