LF-21234: Add new Twitter fycons for like, reply and retweet.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -575,6 +575,15 @@
 .fycon-tv-sd {
   &:before { content: "\e0a4"; }
 }
+.fycon-twitter-like {
+  &:before { content: "\e0c8"; }
+}
+.fycon-twitter-reply {
+  &:before { content: "\e0c7"; }
+}
+.fycon-twitter-retweet {
+  &:before { content: "\e0c6"; }
+}
 .fycon-undo {
   &:before { content: "\e0a5"; }
 }
