--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -419,6 +419,9 @@
 .fycon-nav-expand {
   &:before { content: "\e075"; }
 }
+.fycon-nav-highlights {
+  &:before { content: "\e0ca"; }
+}
 .fycon-network {
   &:before { content: "\e076"; }
 }
@@ -427,6 +430,9 @@
 }
 .fycon-photograph {
   &:before { content: "\e078"; }
+}
+.fycon-pin {
+  &:before { content: "\e0c9"; }
 }
 .fycon-plane {
   &:before { content: "\e079"; }
