Add YouTube fycon class that's easier to call.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -551,6 +551,7 @@
 .fycon-source-yahoo {
   &:before { content: "\e0c5"; }
 }
+.fycon-source-youtube,
 .fycon-source-youtube1 {
   &:before { content: "\e09b"; }
 }
@@ -695,6 +696,7 @@
   &.fycon-source-yahoo:before {
     color: @brand-yahoo;
   }
+  &.fycon-source-youtube:before,
   &.fycon-source-youtube1:before {
     color: @brand-youtube;
   }
