Slats: Add small and large slat sizes.

--- a/src/styles/slats.less
+++ b/src/styles/slats.less
@@ -87,6 +87,23 @@
 }
 
 
+// Alternative Sizes
+
+.slat-sm {
+  height: @slat-height-sm;
+  padding: @slat-padding-sm 0;
+}
+
+.slat-lg {
+  height: @slat-height-lg;
+
+  .slat-title {
+    font-size: @slat-title-size-lg;
+    line-height: @slat-title-line-height;
+  }
+}
+
+
 // Helpers
 
 .slat .vertical-center {
