--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -382,7 +382,10 @@
 // Slats
 // -------------------------
 @slat-height:                   60px;
+@slat-height-sm:                48px;
+@slat-height-lg:                72px;
 @slat-padding:                  18px;
+@slat-padding-sm:               12px;
 @slat-border-color:             @gray-light;
 @slat-bg-color:                 #fff;
 @slat-bg-hover-color:           @gray-lighter;
@@ -395,9 +398,9 @@
 @slat-header-font-color:        @gray-dark;
 @slat-header-line-height:       18px;
 @slat-title-size:               14px;
+@slat-title-size-lg:            16px;
 @slat-title-line-height:        18px;
 @slat-title-color:              @gray-darker;
-
 
 // Toggles
 // -------------------------
