Slats: Keep title color fixed on hover.

--- a/src/styles/slats.less
+++ b/src/styles/slats.less
@@ -84,6 +84,10 @@
   font-weight: normal;
   line-height: @slat-title-line-height;
   color: @slat-title-color;
+
+  &:hover {
+    color: @slat-title-color;
+  }  
 }
 
 
