Slats: Variable height and disabled styles.

--- a/src/styles/slats.less
+++ b/src/styles/slats.less
@@ -108,6 +108,20 @@
 }
 
 
+// Variable Height
+
+.slat-variable {
+  height: auto;
+}
+
+
+// Disabled
+
+.slat-disabled {
+  cursor: not-allowed;
+}
+
+
 // Helpers
 
 .slat .vertical-center {
