Add fycons: Storifycons, upload app, user groups.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -38,25 +38,35 @@
 // Common Social Media Colors
 // -------------------------
 
-
-@brand-drupal: 				#0077c0;
-@brand-facebook:			#3b5998;
-@brand-flickr: 				#ff0084;
-@brand-foursquare: 			#0cbadf;
-@brand-google: 				#4285f4;
-@brand-gplus: 				#dd4b39;
-@brand-instagram: 			#3f729b;
-@brand-linkedin: 			#0e76a8;
-@brand-pinterest: 			#c8232c;
-@brand-reddit: 				#ff4500;
-@brand-rss: 				#ee802f;
-@brand-soundcloud: 			#ff7700;
-@brand-tumblr: 				#34526f;
-@brand-twitter: 			#55acee;
-@brand-vimeo: 				#44bbff;
-@brand-vine: 			 	#00a478;
-@brand-youtube: 			#c4302b;
-@brand-wordpress: 			#21759b;
+@brand-audioboo:      #b31277;
+@brand-breakingnews:  #dd3618;
+@brand-chute:         #3a9fce;
+@brand-disqus:        #2e9fff;
+@brand-drupal:        #0077c0;
+@brand-facebook:      #3b5998;
+@brand-flickr:        #ff0084;
+@brand-foursquare:    #0cbadf;
+@brand-getty:         #000;
+@brand-giphy:         #9840fb;
+@brand-google:        #DC4E41;
+@brand-gplus:         #dd4b39;
+@brand-instagram:     #3f729b;
+@brand-linkedin:      #0e76a8;
+@brand-pinterest:     #c8232c;
+@brand-reddit:        #ff4500;
+@brand-rss:           #ee802f;
+@brand-shutterstock:  #eb2529;
+@brand-slideshare:    #e9953b;
+@brand-soundcloud:    #ff7700;
+@brand-stocktwits:    #ac0013;
+@brand-tumblr:        #34526f;
+@brand-twitter:       #55acee;
+@brand-vimeo:         #44bbff;
+@brand-vine:          #00a478;
+@brand-wordpress:     #21759b;
+@brand-yahoo:         #780099;
+@brand-youtube:       #c4302b;
+@brand-zemanta:       #fe961f;
 
 // Typography
 // -------------------------
