Add ScrollSpy and React code.

--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -29,7 +29,8 @@
           <li class=""><a href="#buttons-colors">Colors</a></li>
           <li class=""><a href="#buttons-disabled">Disabled Button</a></li>
           <li class=""><a href="#buttons-sizes">Sizes</a></li>
-          <li class=""><a href="#buttons-fycons">Fycons in Buttons</a></li>
+          <li class=""><a href="#buttons-fycons">Fycon Sizes</a></li>
+          <li class=""><a href="#buttons-plus">Add a Plus ("+")</a></li>
         </ul>
       </li>
       <li class=""> 
@@ -53,7 +54,3 @@
     </ul>
   </div>
 </header>
-
-<script>
-  $('body').scrollspy({ target: '#main-nav' });
-</script>
