Checkboxes and Radio Buttons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
         </ul>
       </li>
       <li class="{% if page.url contains '/buttons.html' %}active{% endif %}"> 
-        <a href="#buttons">Buttons</a>
+        <a href="buttons.html">Buttons</a>
         <ul class="nav">
           <li class=""><a href="#buttons-default">Default Button</a></li>
           <li class=""><a href="#buttons-colors">Colors</a></li>
@@ -31,6 +31,13 @@
           <li class=""><a href="#buttons-sizes">Sizes</a></li>
           <li class=""><a href="#buttons-fycons">Fycon Sizes</a></li>
           <li class=""><a href="#buttons-plus">Add a Plus ("+")</a></li>
+        </ul>
+      </li>
+      <li class="{% if page.url contains '/form-controls.html' %}active{% endif %}">
+        <a href="form-controls.html">Form Controls</a>
+        <ul class="nav">
+          <li class=""><a href="#checkboxes">Checkboxes</a></li>
+          <li class=""><a href="#radio-buttons">Radio Buttons</a></li>
         </ul>
       </li>
       <li class=""> 
