Add Search Forms.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,6 +47,15 @@
           <li><a href="#labels-sizes">Sizes</a></li>
         </ul>
       </li>
+      <li class="{% if page.url contains '/search-forms.html' %}active{% endif %}">
+        <a href="search-forms.html">Search Forms</a>
+        <ul class="nav">
+          <li><a href="#search-forms-default">Default</a></li>
+          <li><a href="#search-forms-with-loader">With Loader</a></li>
+          <li><a href="#search-forms-with-button">With Button</a></li>
+          <li><a href="#search-forms-sizes">Sizes</a></li>
+        </ul>
+      </li>
     </ul>
   </div>
 </header>
