Add 'Importing Variables & Mixins'

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,9 @@
           <li><a href="#overview-changelog">Changelog</a></li>
         </ul>
       </li>
+      <li class="{% if page.url contains '/importing-variables.html' %}active{% endif %}">
+        <a href="importing-variables.html">Importing Variables</a>
+      </li>
       <li class="{% if page.url contains '/buttons.html' %}active{% endif %}">
         <a href="buttons.html">Buttons</a>
         <ul class="nav">
